# haskell-interpreter-for-python

./: CHANGELOG.md  LICENSE  README.md  hipy.cabal
examples/: assignments.py  evenorodd.py  fib.py  forloop.py  function.py  helloworld.py  ifstatement.py  ifstatements.py  input.py  listindexing.py  listsandstrings.py  random.py  range.py  simplestimport.py  strings.py
src/: AST.hs  Evaluator.hs  Main.hs  Parser.hs  StdLib.hs  Tokeniser.hs  Tokenizer.hs  Types.hs
test/: EvaluatorTests.hs  ParserTests.hs  Spec.hs  TestUtils.hs  TokeniserTests.hs  TokenizerTests.hs
