cabal-version: 3.0

name: hipy
version: 0.0.0.2
synopsis: A Python interpreter written in Haskell
license: MIT
license-file: LICENSE
author: Christopher Stewart, Sean Robinson
maintainer: christopher.stewart24@imperial.ac.uk, sean.robinson24@imperial.ac.uk
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-settings
    ghc-options: -Wtabs -Wunused-binds -Wmissing-signatures
    default-language: Haskell2010
    build-depends: base

library
    import: common-settings
    hs-source-dirs: src
    exposed-modules: Evaluator, Parser, Tokeniser, Types
    build-depends: base
    default-language: Haskell2010

executable hipy
    import: common-settings
    main-is: Main.hs
    hs-source-dirs: src
    build-depends:
        base,
        hipy
    default-language: Haskell2010
    other-modules: Evaluator, Parser, Tokeniser, Types

common test-common
    import: common-settings
    hs-source-dirs: test
    ghc-options: -threaded
    build-depends:
        tasty >=1.1 && <1.6,
        hipy

test-suite hipy-test
    import: test-common
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        tasty-hunit >=0.9 && <0.11
    other-modules:
        EvaluatorTests,
        ParserTests,
        TestUtils,
        TokeniserTests